objects/WorkElementPredecessor__c.object
<CustomObject>
    <fields>
        <fullName>Predecessor_Work_Element_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Process Work Element ID</label>
        <referenceTo>Work_Element__c</referenceTo>
        <relationshipLabel>Process Work Element Predecessors (Predecessor Work Element ID)</relationshipLabel>
        <relationshipName>Work_Element_Predecessors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predecessor_Work_Element_Name__c</fullName>
        <formula>Predecessor_Work_Element_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predecessor Process Work Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Element_ID__c</fullName>
        <label>Process Work Element ID</label>
        <referenceTo>Work_Element__c</referenceTo>
        <relationshipLabel>Process Work Element Predecessors (Work Element ID)</relationshipLabel>
        <relationshipName>Work_Element_Predecessors1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_Element_Name__c</fullName>
        <formula>Work_Element_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Work Element Name</label>
        <type>Text</type>
    </fields>
    <label>Process Work Element Predecessor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PWEP-{0000000000}</displayFormat>
        <label>Process WorkElementPredecessorID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Work Element Predecessors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>